syntax = "proto3";

package ai.verta.uac;
option go_package = "github.com/VertaAI/modeldb/protos/gen/go/protos/public/uac";

option java_multiple_files = true;

import "google/api/annotations.proto";
import "protos/public/common/CommonService.proto";

message CollectTelemetry{
  string id = 1;
  repeated common.KeyValue metrics = 2;
  message Response {
    bool status=1;
  }
}

service TelemetryService {
  rpc collectTelemetry (CollectTelemetry) returns (CollectTelemetry.Response) {
    option (google.api.http) = {
      post: "/v1/telemetry/collectTelemetry"
      body: "*"
    };
  };
}
